add Format with tests, yml, service, repository, entity and controller
